# learn_rs.horizon.x00_beginner.x00_setup

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/main/rs/x00_setup/: lib.rs  main.rs
src/test/rs/x00_setup/: lib.rs
