#REM: Project basic meta-data/info
[package]
name = "x00_setup"
version = "0.0.0"
edition = "2024"

#REM: Project main-entry point and other basic meta-data
[[bin]]
name = "x00_setup"
path = "src/main/rs/x00_setup/main.rs"

#REM: Project 'lib module' and other basic meta-data
[lib]
crate-type = [
  "rlib", "cdylib"
]
name = "x00_setup"
path = "src/main/rs/x00_setup/lib.rs"

#REM: Project 'integration test module' and other basic meta-data
[[test]]
name = "x00_setup_test"
path = "src/test/rs/x00_setup/lib.rs"